--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.url=jdbc:postgresql://baya:tjpCDrDqttnL7fGzbPbnXy2SalNL4w7h@dpg-d6dcd1stgctc73f29ab0-a/bayabank_db
+spring.datasource.url=jdbc:postgresql://dpg-d6dcd1stgctc73f29ab0-a.oregon-postgres.render.com/bayabank_db
 spring.datasource.username=baya
 spring.datasource.password=tjpCDrDqttnL7fGzbPbnXy2SalNL4w7h
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 server.port=${PORT:8080}
